--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "creative",
   "version": "0.1.0",
+  "homepage": "https://github.com/akovalenko777/creative",
   "private": true,
   "dependencies": {
     "@react-three/drei": "^9.56.27",
@@ -21,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
